# systematic_crypto_trading_bot

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  REPOSPEC.md  main.py  pyproject.toml  run_rolling_windows.py  run_window_sweep.py
alpha/: contract.py  expression.py  normalizer.py  registry.py
alphas/: schema.json
backtest/: __init__.py  analysis.py  backtest_monitor.py  cli.py  config.py  data_loader.py  onchain_loader.py  rolling_windows.py  runner.py  simulated_execution.py  simulated_risk.py  window_sweep.py
config/: default.yaml
core/: models.py
data/: buffer.py  connector.py
data_pipeline/: README.md  fetch_all.py  fetch_coinmetrics_onchain.py  pyproject.toml  symbols.py
execution/: order_manager.py  roostoo_executor.py  sim_executor.py  trade_logger.py
features/: extractor.py
models/: inference.py  train.py
notes/: core_satellite_rotation_v1_best_20260325.md
onchain/: __init__.py  schema.py
risk/: bayesian_volatility.py  risk_shield.py  tracker.py
scripts/: data_generation.sh  export_model.sh  generate_data.sh  paper_trade.sh  run.sh  start.sh  start_competition.sh  status.sh  sweep_models.sh  sweep_one.sh  sweep_parallel.sh  sweep_sequential.sh  test.sh  train.sh  upload.sh
strategy/: bayesian_symbol_performance.py  factor_engine.py  factor_icir_manager.py  logic.py  monitor.py  optimizer.py  sizing.py
tests/: test_alpha_contract.py  test_alpha_engine.py  test_backtest_analysis.py  test_backtest_data_loader.py  test_bayesian_symbol_performance.py  test_buffer.py  test_expression.py  test_features.py  (+20 more)
(+33 files in other folders)
