[project]
name = "data-pipeline"
version = "0.1.0"
description = "Fetch & clean crypto OHLCV data for HuggingFace upload"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.5.43",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "pyarrow>=15.0",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
]
